@@ -157,8 +157,10 @@
           (define-key m (kbd "C-n") "gnext")
           (define-key m (kbd "SPC") "gnext")
           (define-key m (kbd "C-SPC") "gnext")
+          (define-key m (kbd "N") "gnext-with-window")
           (define-key m (kbd "p") "gprev")
           (define-key m (kbd "C-p") "gprev")
+          (define-key m (kbd "P") "gprev-with-window")
           (define-key m (kbd "o") "gother")
           (define-key m (kbd "'") "gselect")
           (define-key m (kbd "\"") "grouplist")
